--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "0.5.5",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-qrcode-reader": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
