--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/toast": "^3.2.1",
     "@nuxtjs/vuetify": "0.5.5",
     "nuxt": "^2.0.0",
     "vue-qrcode-reader": "^2.0.1"
