--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@nuxtjs/auth": "^4.8.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.3.0",
+    "@nuxtjs/moment": "^1.2.0",
     "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/toast": "^3.2.1",
     "@nuxtjs/vuetify": "0.5.5",
+    "lodash.assign": "^4.2.0",
+    "lodash.merge": "^4.6.1",
     "nuxt": "^2.0.0",
-    "vue-qrcode-reader": "^2.0.1"
+    "vue-image-lightbox-carousel": "^1.0.7",
+    "vue-popperjs": "^2.0.4",
+    "vue-qrcode-component": "^2.1.1",
+    "vue-qrcode-reader": "^2.0.1",
+    "vuetify-dialog": "^0.3.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
